src/objects/Favourite_New__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Favourites_New</relationshipLabel>
        <relationshipName>Favourites_New</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Shortlisted__c</fullName>
        <label>Date Shortlisted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_New__c</fullName>
        <label>Property New</label>
        <referenceTo>Property_New__c</referenceTo>
        <relationshipLabel>Favourites_New</relationshipLabel>
        <relationshipName>Favourites_New</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Favourite_New</label>
    <nameField>
        <displayFormat>FAV-{0000}</displayFormat>
        <label>Favourite_New Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favourites_New</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>